Correcting setup of test T2d

--- a/tests/T2d/T2d MMS.ipynb
+++ b/tests/T2d/T2d MMS.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3a8c4137b3ca132b01785f44ecc92323b680f925bd4f1966c5fae8fd08cb0679"
+  "signature": "sha256:c9e232dd570488a6e98a6119667b1e2cac33ed63da38065dcf5b3cc20984bacf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -336,9 +336,72 @@
      "prompt_number": 35
     },
     {
-     "cell_type": "raw",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Compute dt to give maximum CFL = 0.1 on 128^3 grid\n",
+      "# Also time to run through domain 10 times\n",
+      "\n",
+      "l = 1.0\n",
+      "n = 128\n",
+      "PI = 3.14\n",
+      "CFL = 0.1\n",
+      "\n",
+      "U = 2 * (l / (2 * PI))\n",
+      "dx = l / n\n",
+      "dt = CFL * dx / U\n",
+      "\n",
+      "u = 1 * (l / (2 * PI)) # Not really minimum velocity (that would be 0)\n",
+      "t_thru = l / u\n",
+      "t_end = 10 * t_thru\n",
+      "nsteps = t_end / dt\n",
+      "\n",
+      "print \"dt = \", dt\n",
+      "print \"t_end = \", t_end, \" nsteps = \", nsteps\n"
+     ],
+     "language": "python",
      "metadata": {},
-     "source": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "dt =  0.002453125\n",
+        "t_end =  62.8  nsteps =  25600.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Compute \"true\" CFL\n",
+      "dt = 0.002\n",
+      "U * dt / dx"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "0.08152866242038216"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
